--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.Boton{
+  background-color: rgb(65, 42, 17);
+  color: white;
+  border-radius: 5px;
+  height: 50px;
+  width: 100px;
+}
+ 
+
